[package]
name = "ngWallet-cli"
version = "0.22.0"
description = "Console utility for secure account management"
homepage = "https://ngin.cash"
repository = "https://github.com/NginProject/ngWallet-cli"
documentation = "https://docs.rs/emerald-cli"
keywords = ["ngin", "blockchain", "crypto-wallet", "cold-storage", "cli"]
categories = ["console", "bash"]
readme = "README.md"
license = "Apache-2.0"


[[bin]]
name = "ngWallet-cli"
path = "src/main.rs"

[dependencies]
log = "0.3"
jsonrpc-core = "8.0"
serde = "1.0"
hex = "0.2"
lazy_static = "0.2"
serde_json = "1.0"
serde_derive = "1.0"
ngWallet-rs = { git = "https://github.com/NginProject/ngWallet-rs" }
regex = "0.2"
hyper = "0.12"
reqwest = "0.9"
http = "0.1"
rpassword = "1.0"
url = "1.7.0"
text_io = "0.1"
clap = {version = "2.31", features = ["yaml", "color"]}
env_logger = { version = "0.4", optional = true }
clippy = {version = "0.0", optional = true}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
# quickcheck_macros = "0.4"

[features]
default = ["cli"]
cli = ["env_logger"]
dev = ["clippy"]
